k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: url-shortener-ns
  labels:
    name: url-shortener-ns
