k8s/monitoring.yaml
# Prometheus Service
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: url-shortener-ns
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
  selector:
    app: prometheus
---
# Prometheus Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: url-shortener-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
---
# Zipkin Service
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: url-shortener-ns
spec:
  type: NodePort
  ports:
    - port: 9411
      targetPort: 9411
      nodePort: 30411
  selector:
    app: zipkin
---
# Zipkin Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: url-shortener-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:latest
          ports:
            - containerPort: 9411
