k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener-ns
  labels:
    app: url-shortener
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: url-shortener
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-nodeport
  namespace: url-shortener-ns
  labels:
    app: url-shortener
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: url-shortener
